--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,11 +6,11 @@
   </head>
   <!--<script src="/javascripts/adzap-analytics.js"></script>-->
   <script type="text/javascript">
-      var Publisher = { key: '168VTfqDuMJ2FryC5HgZOA5RwMV',id: '357668695101767681' ,siteId: '357668695164223489' };
+      var Publisher = { key: '16DaawY7HUw8VEHUqnYF9QBYHfk',id: '358178135762960385' ,siteId: '358178135815258113' };
 
       (function(d, t) {
           var s = d.createElement(t); s.type = 'text/javascript'; s.async = true;
-          s.src = '//localhost:3001/javascripts/adzap-analytics.js';
+          s.src = 'http://tk.adzapsrv.com/api/v1/tracker/ck?publisherKey=16DaawY7HUw8VEHUqnYF9QBYHfk&publisherID=358178135762960385&siteID=358178135815258113&device=mobile';
           var r = d.getElementsByTagName(t)[0]; r.parentNode.insertBefore(s, r);
       }(document, 'script'));
   </script>
